kubernetes-schemas/drug-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drug-gateway-deployment
  namespace: default
  labels:
    app: drug-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drug-gateway
  template:
    metadata:
      labels:
        app: drug-gateway
    spec:
      containers:
        - name: drug-gateway
          image: baisnake/drug-gateway:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
