kubernetes-schemas/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
  namespace: default
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: docker.io/bitnami/kafka:3.5
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /bitnami/kafka
              name: kafka-data
          ports:
            - containerPort: 9092
            - containerPort: 9094
      volumes:
        - name: kafka-data
          emptyDir: {}
