kubernetes-schemas/prescription-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription-db-deployment
  namespace: default
  labels:
    app: prescription-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prescription-db
  template:
    metadata:
      labels:
        app: prescription-db
    spec:
      containers:
        - name: prescription-db
          image: postgres:13.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
