kubernetes-schemas/prescription-db-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription-db-master-deployment
  namespace: default
  labels:
    app: prescription-db-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prescription-db-master
  template:
    metadata:
      labels:
        app: prescription-db-master
    spec:
      containers:
        - name: prescription-db-master
          image: bitnami/postgresql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
