kubernetes-schemas/prescription-db-slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription-db-slave-deployment
  namespace: default
  labels:
    app: prescription-db-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prescription-db-slave
  template:
    metadata:
      labels:
        app: prescription-db-slave
    spec:
      containers:
        - name: prescription-db-slave
          image: bitnami/postgresql
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
