kubernetes-schemas/prescription-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prescription-service-deployment
  namespace: default
  labels:
    app: prescription-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prescription-service
  template:
    metadata:
      labels:
        app: prescription-service
    spec:
      containers:
        - name: prescription-service
          image: baisnake/prescription-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
