kubernetes-schemas/stock-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-db-deployment
  namespace: default
  labels:
    app: stock-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-db
  template:
    metadata:
      labels:
        app: stock-db
    spec:
      containers:
        - name: stock-db
          image: postgres:13.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
