kubernetes-schemas/stock-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service-deployment
  namespace: default
  labels:
    app: stock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      containers:
        - name: stock-service
          image: baisnake/stock-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
