kubernetes-schemas/drug-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drug-gateway-service
  namespace: default
spec:
  selector:
    app: drug-gateway
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
