kubernetes-schemas/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: default
spec:
  selector:
    app: kafka
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9092
      targetPort: 9092
