kubernetes-schemas/keycloak-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-service
  namespace: default
spec:
  selector:
    app: keycloak-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
