kubernetes-schemas/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: default
spec:
  externalName: 192.168.100.7
  selector:
    app: keycloak
  type: ExternalName
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30000
