kubernetes-schemas/prescription-db-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prescription-db-master-service
  namespace: default
spec:
  selector:
    app: prescription-db-master
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5434
      targetPort: 5432
