kubernetes-schemas/prescription-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prescription-service
  namespace: default
spec:
  selector:
    app: prescription-service
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
