kubernetes-schemas/stock-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-db-service
  namespace: default
spec:
  selector:
    app: stock-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5435
      targetPort: 5432
